Fixing Flexbox gap in Safari

--- a/css/queries.css
+++ b/css/queries.css
@@ -130,7 +130,7 @@
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.9);
     width: 100%;
     height: 100vh;
     position: absolute;
@@ -152,6 +152,9 @@
 
     /** Step 3 - Hide it from screen reader */
     visibility: hidden;
+
+    backdrop-filter: blur(5px);  /** Blurs to content, behind */
+    -webkit-backdrop-filter: blur(5px);  /** Works on Safari */
   }
 
   .nav-open .main-nav {
@@ -296,5 +299,55 @@
     /** The image disappears, that's why we set height */
     height: 36rem;  
     grid-row: 1;
+  }
+}
+
+/** Fixing Safari flexbox gap */
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
   }
 }
